@@ -91,9 +91,9 @@ public class ModelingViewServiceImpl extends ServiceImpl<ModelingViewMapper, Mod
             return Collections.emptyList();
         }
 
-        List<String> viewIds = modelingViews.stream().map(ModelingView::getId).collect(Collectors.toList());
+        List<String> viewIds = modelingViews.stream().map(ModelingView::getId).toList();
         List<ModelingViewColumn> columnList = modelingViewColumnService.list(Wrappers.<ModelingViewColumn>lambdaQuery().in(ModelingViewColumn::getViewId, viewIds));
-        List<ModelingViewColumnView> columnViewList = columnList.stream().map(ModelingViewColumn::toView).collect(Collectors.toList());
+        List<ModelingViewColumnView> columnViewList = columnList.stream().map(ModelingViewColumn::toView).toList();
         Map<String, List<ModelingViewColumnView>> columnMap = columnViewList.stream().collect(Collectors.groupingBy(ModelingViewColumnView::getViewId, Collectors.toList()));
 
         ModelingFieldFindParam fieldParam = new ModelingFieldFindParam();
@@ -145,9 +145,9 @@ public class ModelingViewServiceImpl extends ServiceImpl<ModelingViewMapper, Mod
         Map<String, UserView> userMap = users.stream().map(User::toView).collect(Collectors.toMap(UserView::getId, it -> it));
 
         // 查询视图配置详情
-        List<String> viewIds = modelingViews.stream().map(ModelingView::getId).collect(Collectors.toList());
+        List<String> viewIds = modelingViews.stream().map(ModelingView::getId).toList();
         List<ModelingViewColumn> columnList = modelingViewColumnService.list(Wrappers.<ModelingViewColumn>lambdaQuery().in(ModelingViewColumn::getViewId, viewIds));
-        List<ModelingViewColumnView> columnViewList = columnList.stream().map(ModelingViewColumn::toView).collect(Collectors.toList());
+        List<ModelingViewColumnView> columnViewList = columnList.stream().map(ModelingViewColumn::toView).toList();
         // 视图ID -> column list
         Map<String, List<ModelingViewColumnView>> columnMap = columnViewList.stream().collect(Collectors.groupingBy(ModelingViewColumnView::getViewId, Collectors.toList()));
 
@@ -342,7 +342,7 @@ public class ModelingViewServiceImpl extends ServiceImpl<ModelingViewMapper, Mod
 
         List<Map<String, Object>> data = getBaseMapper().pageEntity(pageSql, args);
 
-        List<ModelingFieldDefView> columnList = columnNames.stream().map(fieldNameMap::get).collect(Collectors.toList());
+        List<ModelingFieldDefView> columnList = columnNames.stream().map(fieldNameMap::get).toList();
 
         Set<String> optionIds = new HashSet<>();
         Set<String> userIds = new HashSet<>();
