@@ -15,12 +15,10 @@ import com.l1yp.model.view.system.RoleView;
 import com.l1yp.service.system.IRoleService;
 import com.l1yp.util.BeanCopierUtil;
 import org.springframework.stereotype.Service;
-import org.springframework.util.CollectionUtils;
 
 import javax.annotation.Resource;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RoleServiceImpl extends ServiceImpl<RoleMapper, Role> implements IRoleService {
@@ -29,7 +27,7 @@ public class RoleServiceImpl extends ServiceImpl<RoleMapper, Role> implements IR
     public List<RoleView> findRole() {
         List<Role> roles = getBaseMapper().selectList(null);
 
-        return roles.stream().map(Role::toView).collect(Collectors.toList());
+        return roles.stream().map(Role::toView).toList();
     }
 
     @Override
@@ -75,6 +73,6 @@ public class RoleServiceImpl extends ServiceImpl<RoleMapper, Role> implements IR
     @Override
     public List<String> menuBound(String roleId) {
         List<RoleMenu> roleMenus = roleMenuService.getBaseMapper().selectList(Wrappers.<RoleMenu>lambdaQuery().eq(RoleMenu::getRoleId, roleId));
-        return roleMenus.stream().map(RoleMenu::getMenuId).collect(Collectors.toList());
+        return roleMenus.stream().map(RoleMenu::getMenuId).toList();
     }
 }
